Added jsign instructions